[package]
name = "auto-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["cookies", "blocking"] }
futures = "0.3"
chrono = { version = "0.4.31", features = ["clock"] }
